# Research-Mesh-Generation

./: .gitignore  CMakeLists.txt  README.md  blelloch.cuh  dewall.cuh  main.cu  math.cuh  primitive.cuh  profiler.cu  profiler.cuh  test.m
src/: CMakeLists.txt  circles.cu  circles_kernel_distance.cu  circles_kernel_lightweight.cu  circles_kernel_noop.cu  circles_kernel_pure.cu  circles_kernel_shotgun.cu  circles_linear.cuh  circles_local.cu  circles_local_serial_pure.cu  circles_noop.cuh  circles_ntensor_lightweight.cu  circles_ntensor_twostep.cu  circles_parallel.cuh  circles_parallel_kernel_distance.cu  circles_parallel_kernel_pure.cu  circles_ptensor_lightweight.cu  circles_ptensor_twostep.cu  circles_serial.cuh  circles_serial_disjoint.cu  circles_serial_distance.cu  circles_serial_lightweight.cu  circles_serial_noop.cu  circles_serial_pure.cu  circles_serial_regions.cu  circles_serial_shotgun.cu  circles_tensor_disjoint.cu  circles_tensor_distance.cu  circles_tensor_lightweight.cu  circles_tensor_shotgun.cu  circles_tensor_twostep.cu  circles_tensor_twostep_ec.cu  math.cuh  mesh.cu  mesh_blelloch.cuh  mesh_blelloch_old.cuh  mesh_dewall.cu  mesh_dewall.cuh  mesh_dewall_kernel.cu  mesh_dewall_old.cuh  (+8 more)
